--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "name": "mobile",
+    "scheme": "nlwspacetime",
     "slug": "mobile",
     "version": "1.0.0",
     "orientation": "portrait",
